Bug 1926794 - [devtools] Replace incorrect usage of --theme-text-color-inactive. r=devtools-reviewers,bomsy.
The variable was used in a few places for elements that are not inactive.
It was probably picked because of its lighter color, but we do have
specific variable for that (for text and icons), that are better suited
and already adapt to High Contrast Mode.
In one case, the rule using it wasn't even used, so I removed it completely.

Depends on D226789

Differential Revision: https://phabricator.services.mozilla.com/D226745

UltraBlame original commit: 7e3b74a648bb4cff60945bc90f90ccf72aebe8fe

--- a/devtools/client/themes/fonts.css
+++ b/devtools/client/themes/fonts.css
@@ -1,3 +1,80 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
+/
+*
+CSS
+Variables
+specific
+to
+the
+font
+editor
+that
+aren
+'
+t
+defined
+by
+the
+themes
+*
+/
 :
 root
 {
@@ -773,6 +850,58 @@ content
 "
 ;
 }
+/
+*
+Make
+font
+-
+name
+hoverable
+as
+doing
+so
+highlights
+text
+runs
+in
+the
+page
+.
+The
+hit
+target
+is
+3px
+around
+the
+font
+name
+which
+is
+why
+we
+offset
+them
+with
+a
+-
+3px
+horizontal
+margin
+so
+they
+appear
+at
+the
+same
+place
+as
+they
+normall
+would
+.
+*
+/
 .
 font
 -
@@ -830,6 +959,17 @@ css
 -
 code
 {
+/
+*
+Force
+text
+direction
+in
+LTR
+and
+RTL
+*
+/
 direction
 :
 ltr
@@ -898,6 +1038,17 @@ start
 3px
 ;
 }
+/
+*
+Force
+arrow
+direction
+in
+LTR
+and
+RTL
+*
+/
 .
 font
 -
@@ -979,11 +1130,11 @@ var
 -
 theme
 -
-text
+icon
+-
+dimmed
 -
 color
--
-inactive
 )
 ;
 border
@@ -1064,6 +1215,25 @@ margin
 0
 ;
 }
+/
+*
+Style
+*
+all
+*
+axis
+controls
+with
+a
+top
+separator
+.
+See
+reset
+below
+.
+*
+/
 .
 font
 -
@@ -1097,6 +1267,39 @@ top
 1em
 ;
 }
+/
+*
+Remove
+styles
+form
+all
+axis
+controls
+aside
+from
+the
+first
+one
+.
+Workaround
+for
+:
+first
+-
+of
+-
+type
+which
+doesn
+'
+t
+work
+with
+class
+names
+.
+*
+/
 .
 font
 -
@@ -1434,6 +1637,15 @@ color
 )
 ;
 }
+/
+*
+Styles
+for
+disabled
+input
+fields
+*
+/
 .
 font
 -
@@ -1469,6 +1681,18 @@ opacity
 5
 ;
 }
+/
+*
+Do
+not
+use
+browser
+"
+invalid
+"
+state
+*
+/
 .
 font
 -
@@ -1503,6 +1727,17 @@ shadow
 none
 ;
 }
+/
+*
+Do
+not
+show
+dotted
+line
+focus
+outline
+*
+/
 .
 font
 -
@@ -1520,6 +1755,21 @@ outline
 none
 ;
 }
+/
+*
+Make
+native
+number
+steppers
+disappear
+by
+treating
+it
+as
+text
+field
+*
+/
 .
 font
 -
@@ -1537,6 +1787,21 @@ appearance
 textfield
 ;
 }
+/
+*
+Swap
+around
+order
+of
+value
+input
+and
+unit
+dropdown
+for
+RTL
+*
+/
 .
 font
 -
@@ -1561,6 +1826,26 @@ value
 -
 label
 {
+/
+*
+Combined
+width
+of
+.
+font
+-
+value
+-
+input
+and
+.
+font
+-
+value
+-
+select
+*
+/
 width
 :
 calc
@@ -1580,6 +1865,23 @@ block
 4px
 ;
 }
+/
+*
+Mock
+separator
+because
+inputs
+don
+'
+t
+have
+distinguishable
+borders
+in
+dark
+theme
+*
+/
 .
 theme
 -
@@ -1644,6 +1946,22 @@ end
 2px
 ;
 }
+/
+*
+Custom
+styles
+for
+<
+select
+>
+elements
+within
+the
+font
+editor
+.
+*
+/
 .
 font
 -
@@ -1766,6 +2084,21 @@ start
 none
 ;
 }
+/
+*
+Swap
+around
+order
+of
+value
+input
+and
+unit
+dropdown
+for
+RTL
+*
+/
 .
 font
 -
@@ -1911,6 +2244,26 @@ end
 10px
 ;
 }
+/
+*
+Firefox
+doesn
+'
+t
+support
+pseudo
+-
+elements
+on
+inputs
+.
+Using
+the
+container
+instead
+.
+*
+/
 .
 font
 -
@@ -2145,6 +2498,43 @@ margin
 0
 ;
 }
+/
+*
+The
+value
+of
+font
+-
+weight
+goes
+from
+100
+to
+900
+in
+increments
+of
+100
+.
+Decorate
+the
+slider
+for
+font
+-
+weight
+to
+have
+9
+vertical
+notches
+using
+a
+linear
+gradient
+.
+*
+/
 .
 font
 -
@@ -2167,6 +2557,23 @@ size
 :
 3px
 ;
+/
+*
+Draw
+a
+vertical
+line
+to
+get
+one
+notch
+per
+background
+-
+image
+instance
+*
+/
 background
 -
 image
@@ -2198,6 +2605,24 @@ transparent
 0
 )
 ;
+/
+*
+Offset
+the
+background
+so
+the
+notch
+aligns
+with
+the
+center
+of
+the
+slider
+thumb
+*
+/
 background
 -
 position
@@ -2205,6 +2630,16 @@ position
 5px
 center
 ;
+/
+*
+Repeat
+the
+background
+-
+image
+horizontally
+*
+/
 background
 -
 repeat
@@ -2213,6 +2648,20 @@ repeat
 -
 x
 ;
+/
+*
+Size
+the
+background
+to
+get
+nine
+visible
+notch
+instances
+.
+*
+/
 background
 -
 size
