--- a/devtools/client/debugger/src/components/SecondaryPanes/CommandBar.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/CommandBar.css
@@ -1,3 +1,63 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+<
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+>
+.
+*
+/
 .
 command
 -
@@ -99,45 +159,6 @@ flex
 grow
 :
 1
-;
-}
-.
-command
--
-bar
-.
-step
--
-position
-{
-color
-:
-var
-(
--
--
-theme
--
-text
--
-color
--
-inactive
-)
-;
-padding
--
-top
-:
-8px
-;
-margin
--
-inline
--
-end
-:
-4px
 ;
 }
 .
