Bug 1926794 - [devtools] Use GrayText for unmatched selector, unused and overridden declarations in High Contrast Mode. r=devtools-reviewers,bomsy.
We're setting --theme-text-color-inactive to GrayText in HCM,
and we use this variable for styling unused/inactive items in
the Rules view, as we still want --theme-text-color-alt to have
the default canvas text in HCM.
In non-HCM, --theme-text-color-inactive was lacking contrast
against the usual background, so it's updated to have
sufficient contrast.

Differential Revision: https://phabricator.services.mozilla.com/D226746

UltraBlame original commit: 1e442fe985636550c2f146fd581f66adecd7ad1d

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -3993,7 +3993,7 @@ text
 -
 color
 -
-alt
+inactive
 )
 ;
 }
@@ -4980,6 +4980,23 @@ ruleview
 selector
 -
 separator
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+text
+-
+color
+-
+alt
+)
+;
+}
 .
 ruleview
 -
@@ -5025,7 +5042,7 @@ text
 -
 color
 -
-alt
+inactive
 )
 ;
 }
