Bug 1926851 - [devtools] Handle dirty/new indicator on declaration in High Contrast Mode. r=devtools-reviewers,bomsy.
The indicator was always visible because transparent is forced
into an actual solid color in HCM, and the border is always set
to avoid layout shifts when a declaration becomes updated.
This is fixed by opting out of forced colors just for the declaration
top element, and re-setting it again for children.
The colors used for the indicator, --theme-highlight-green, is properly
set to a high contrast color in HCM.

Differential Revision: https://phabricator.services.mozilla.com/D226779

UltraBlame original commit: 03ae30f42356fe629f02ac074a545b3404302b58

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -4263,6 +4263,103 @@ start
 )
 hanging
 ;
+:
+root
+[
+forced
+-
+colors
+-
+active
+]
+&
+{
+/
+*
+We
+opt
+-
+out
+of
+forced
+-
+colors
+because
+we
+want
+the
+left
+border
+to
+be
+actually
+transparent
+in
+High
+Contrast
+Mode
+when
+the
+declaration
+isn
+'
+t
+new
+/
+updated
+and
+green
+when
+it
+is
+*
+/
+forced
+-
+color
+-
+adjust
+:
+none
+;
+/
+*
+But
+we
+opt
+-
+in
+forced
+colors
+on
+direct
+child
+so
+we
+have
+expected
+High
+Contrast
+colors
+for
+the
+children
+*
+/
+&
+>
+*
+{
+forced
+-
+color
+-
+adjust
+:
+auto
+;
+}
+}
 }
 .
 ruleview
