Bug 1926852 - [devtools] Use text-decoration to indicate editable items in Rules view declaration. r=devtools-reviewers,bomsy.
Using text-decoration allows us to only do it on hover, as it doesn't
triggers a layout shift (contrary to bottom border). This way, it also
prevent always showing the border in High Contrast Mode, where transparent
color is ignored.

Differential Revision: https://phabricator.services.mozilla.com/D226780

UltraBlame original commit: bc5dac32dbd74b552ae2d3034a1248cfe2dee2bd

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -4711,6 +4711,8 @@ color
 ruleview
 -
 namecontainer
+:
+hover
 >
 .
 ruleview
@@ -4720,50 +4722,21 @@ propertyname
 ruleview
 -
 propertyvaluecontainer
+:
+hover
 >
 .
 ruleview
 -
 propertyvalue
 {
-border
+text
 -
-bottom
+decoration
 :
 1px
+underline
 dashed
-transparent
-;
-}
-.
-ruleview
--
-namecontainer
-:
-hover
->
-.
-ruleview
--
-propertyname
-.
-ruleview
--
-propertyvaluecontainer
-:
-hover
->
-.
-ruleview
--
-propertyvalue
-{
-border
--
-bottom
--
-color
-:
 hsl
 (
 0
