Bug 1918178 - Set inputmode="none" to avoid opening the software keybaord in selection.html and selection-ref.html. r=masayuki
Differential Revision: https://phabricator.services.mozilla.com/D227106

UltraBlame original commit: df19e86f5cd1897104f39aa5569bcf64aafd22d9

--- a/layout/reftests/text-overflow/selection-ref.html
+++ b/layout/reftests/text-overflow/selection-ref.html
@@ -748,6 +748,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -890,6 +895,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -972,6 +982,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1037,6 +1052,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1082,6 +1102,11 @@ contenteditable
 =
 "
 true
+"
+inputmode
+=
+"
+none
 "
 spellcheck
 =
@@ -1180,6 +1205,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1242,6 +1272,11 @@ contenteditable
 =
 "
 true
+"
+inputmode
+=
+"
+none
 "
 spellcheck
 =
@@ -1321,6 +1356,11 @@ contenteditable
 =
 "
 true
+"
+inputmode
+=
+"
+none
 "
 spellcheck
 =
@@ -1395,6 +1435,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1455,6 +1500,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1514,6 +1564,11 @@ contenteditable
 =
 "
 true
+"
+inputmode
+=
+"
+none
 "
 spellcheck
 =
