--- a/layout/reftests/text-overflow/selection.html
+++ b/layout/reftests/text-overflow/selection.html
@@ -716,6 +716,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -835,6 +840,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -873,6 +883,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -922,6 +937,11 @@ contenteditable
 =
 "
 true
+"
+inputmode
+=
+"
+none
 "
 spellcheck
 =
@@ -969,6 +989,11 @@ contenteditable
 =
 "
 true
+"
+inputmode
+=
+"
+none
 "
 spellcheck
 =
@@ -1048,6 +1073,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1073,6 +1103,11 @@ contenteditable
 =
 "
 true
+"
+inputmode
+=
+"
+none
 "
 spellcheck
 =
@@ -1117,6 +1152,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1167,6 +1207,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1214,6 +1259,11 @@ contenteditable
 "
 true
 "
+inputmode
+=
+"
+none
+"
 spellcheck
 =
 "
@@ -1260,6 +1310,11 @@ contenteditable
 =
 "
 true
+"
+inputmode
+=
+"
+none
 "
 spellcheck
 =
