Bug 1920711 - [devtools] Fix markup mutation flash in High Contrast Mode. r=devtools-reviewers,ochameau.
Variables used for the background and text colors now have specific values in HCM.
We take this as an opportunity to add the force-color-on-flash class on closing tags,
as it was missing, which is pretty noticable in HCM.

Differential Revision: https://phabricator.services.mozilla.com/D226908

UltraBlame original commit: 7be7483c7e4b844d9cd00cd2ee539c0e10e7aa7f

--- a/devtools/client/themes/variables.css
+++ b/devtools/client/themes/variables.css
@@ -4525,5 +4525,56 @@ color
 :
 SelectedItemText
 ;
+/
+*
+Flashing
+colors
+used
+to
+highlight
+updates
+*
+/
+-
+-
+theme
+-
+contrast
+-
+background
+:
+Mark
+;
+-
+-
+theme
+-
+contrast
+-
+background
+-
+alpha
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+background
+)
+;
+-
+-
+theme
+-
+contrast
+-
+color
+:
+MarkText
+;
 }
 }
