--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -85,6 +85,10 @@ highlight
 -
 propertyname
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -92,6 +96,17 @@ var
 blue
 -
 60
+)
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
+)
 )
 ;
 -
@@ -102,6 +117,10 @@ highlight
 -
 propertyvalue
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -109,6 +128,17 @@ var
 magenta
 -
 70
+)
+var
+(
+-
+-
+theme
+-
+highlight
+-
+red
+)
 )
 ;
 -
@@ -123,6 +153,10 @@ unused
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -130,6 +164,15 @@ var
 grey
 -
 55
+)
+var
+(
+-
+-
+grey
+-
+40
+)
 )
 ;
 -
@@ -142,6 +185,10 @@ background
 -
 color
 :
+light
+-
+dark
+(
 var
 (
 -
@@ -151,6 +198,9 @@ theme
 toolbar
 -
 background
+)
+#
+222225
 )
 ;
 -
@@ -287,86 +337,6 @@ end
 10px
 ;
 }
-}
-:
-root
-.
-theme
--
-dark
-{
--
--
-rule
--
-highlight
--
-propertyname
-:
-var
-(
--
--
-theme
--
-highlight
--
-blue
-)
-;
--
--
-rule
--
-highlight
--
-propertyvalue
-:
-var
-(
--
--
-theme
--
-highlight
--
-red
-)
-;
--
--
-rule
--
-highlight
--
-unmatched
--
-unused
--
-color
-:
-var
-(
--
--
-grey
--
-40
-)
-;
--
--
-rule
--
-header
--
-background
--
-color
-:
-#
-222225
-;
 }
 /
 *
