Bug 1916698 - [devtools] Fix Rules view filter matches in high Contrast Mode. r=devtools-reviewers,bomsy.
Differential Revision: https://phabricator.services.mozilla.com/D226915

UltraBlame original commit: 23dd23304cf5ce2025d78baf7f35afab9d9a0a37

--- a/devtools/client/themes/inspector-shared.css
+++ b/devtools/client/themes/inspector-shared.css
@@ -116,6 +116,28 @@ yellow
 521C76
 )
 ;
+&
+[
+forced
+-
+colors
+-
+active
+]
+{
+-
+-
+inspector
+-
+highlight
+-
+background
+-
+color
+:
+Mark
+;
+}
 }
 .
 empty
