--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -337,6 +337,77 @@ end
 10px
 ;
 }
+&
+[
+forced
+-
+colors
+-
+active
+]
+{
+-
+-
+rule
+-
+highlight
+-
+propertyname
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+color
+)
+;
+-
+-
+rule
+-
+highlight
+-
+propertyvalue
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+color
+)
+;
+-
+-
+rule
+-
+highlight
+-
+unmatched
+-
+unused
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+color
+)
+;
+}
 }
 /
 *
@@ -4675,6 +4746,129 @@ unused
 color
 )
 ;
+}
+/
+*
+In
+High
+Contrast
+Mode
+we
+need
+to
+specifiy
+an
+additional
+color
+for
+elements
+which
+don
+'
+t
+have
+specific
+highlighted
+colors
+(
+selectors
+semi
+colons
+stylesheet
+location
+.
+.
+.
+)
+*
+/
+:
+root
+[
+forced
+-
+colors
+-
+active
+]
+&
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+color
+)
+;
+a
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+color
+)
+;
+}
+/
+*
+the
+overridden
+class
+is
+set
+on
+a
+parent
+element
+of
+the
+ruleview
+-
+highlight
+one
+*
+/
+.
+ruleview
+-
+overridden
+:
+has
+(
+&
+)
+{
+text
+-
+decoration
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+color
+)
+;
+}
 }
 }
 .
