Bug 1927063 - [devtools] Fix splitters in High Contrast Mode. r=devtools-reviewers,ochameau
Differential Revision: https://phabricator.services.mozilla.com/D226898

UltraBlame original commit: adfc049a20f051652c9cb7780a1126f36f46895a

--- a/devtools/client/shared/components/splitter/SplitBox.css
+++ b/devtools/client/shared/components/splitter/SplitBox.css
@@ -1,3 +1,61 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
 .
 split
 -
@@ -165,11 +223,86 @@ border
 -
 box
 ;
+/
+*
+Positive
+z
+-
+index
+positions
+the
+splitter
+on
+top
+of
+its
+siblings
+and
+makes
+it
+clickable
+on
+both
+sides
+.
+*
+/
 z
 -
 index
 :
 1
+;
+/
+*
+opt
+-
+out
+of
+forced
+colors
+because
+the
+transparent
+borders
+are
+turned
+into
+opaque
+ones
+in
+High
+Contrast
+Mode
+.
+-
+-
+theme
+-
+splitter
+-
+color
+has
+specific
+value
+in
+High
+Contrast
+Mode
+so
+we
+should
+be
+fine
+*
+/
+forced
+-
+color
+-
+adjust
+:
+none
 ;
 }
 .
@@ -320,6 +453,17 @@ horz
 .
 splitter
 {
+/
+*
+Emphasize
+the
+horizontal
+splitter
+width
+and
+color
+*
+/
 min
 -
 height
@@ -451,6 +595,17 @@ ns
 resize
 ;
 }
+/
+*
+Emphasized
+splitter
+has
+the
+hover
+style
+.
+*
+/
 .
 split
 -
@@ -497,6 +652,35 @@ events
 none
 ;
 }
+/
+*
+*
+*
+Make
+sure
+splitter
+panels
+are
+not
+processing
+any
+mouse
+*
+events
+.
+This
+is
+good
+for
+performance
+during
+splitter
+*
+bar
+dragging
+.
+*
+/
 .
 split
 -
