--- a/devtools/client/themes/breadcrumbs.css
+++ b/devtools/client/themes/breadcrumbs.css
@@ -714,6 +714,30 @@ top
 -
 1px
 ;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+var
+(
+-
+-
+theme
+-
+icon
+-
+disabled
+-
+color
+)
+;
 }
 .
 breadcrumbs
