Bug 1921758 - [devtools] Use aria-pressed for selected breadcrumb item. r=devtools-reviewers,ochameau.
Differential Revision: https://phabricator.services.mozilla.com/D226670

UltraBlame original commit: 08dc66cce1b1bc81aacf7339329be7454f0c270b

--- a/devtools/client/themes/breadcrumbs.css
+++ b/devtools/client/themes/breadcrumbs.css
@@ -746,7 +746,13 @@ widget
 -
 item
 [
-checked
+aria
+-
+pressed
+=
+"
+true
+"
 ]
 .
 breadcrumbs
@@ -778,8 +784,17 @@ widget
 -
 item
 [
-checked
+aria
+-
+pressed
+=
+"
+true
+"
 ]
+:
+is
+(
 .
 breadcrumbs
 -
@@ -788,15 +803,6 @@ widget
 item
 -
 tag
-.
-breadcrumbs
--
-widget
--
-item
-[
-checked
-]
 .
 breadcrumbs
 -
@@ -813,17 +819,9 @@ breadcrumbs
 widget
 -
 item
-[
-checked
-]
-.
-breadcrumbs
--
-widget
--
-item
 -
 classes
+)
 {
 color
 :
