--- a/devtools/client/themes/breadcrumbs.css
+++ b/devtools/client/themes/breadcrumbs.css
@@ -69,27 +69,12 @@ class
 -
 color
 :
-#
-909090
-;
-}
-.
-theme
+light
 -
 dark
-:
-root
-{
--
--
-breadcrumb
--
-id
--
-class
--
-color
-:
+(
+#
+909090
 var
 (
 -
@@ -102,7 +87,74 @@ color
 -
 strong
 )
+)
 ;
+-
+-
+breadcrumb
+-
+tag
+-
+color
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+var
+(
+-
+-
+theme
+-
+contrast
+-
+color
+)
+)
+;
+&
+[
+forced
+-
+colors
+-
+active
+]
+{
+-
+-
+breadcrumb
+-
+id
+-
+class
+-
+color
+:
+ButtonText
+;
+-
+-
+breadcrumb
+-
+tag
+-
+color
+:
+ButtonText
+;
+}
 }
 /
 *
@@ -594,157 +646,43 @@ widget
 -
 item
 {
-background
 -
-color
+-
+separator
+-
+width
 :
-transparent
+8px
+;
+-
+-
+inline
+-
+padding
+:
+6px
+;
+background
+:
+none
 ;
 border
 :
 none
 ;
-margin
--
-inline
-:
-10px
-1px
-;
 padding
 :
 0
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-first
--
-child
-:
-:
-before
-{
-/
-*
-The
-first
-crumb
-does
-not
-need
-any
-separator
-before
-itself
-*
-/
-content
-:
-unset
-;
-}
-.
-breadcrumbs
--
-widget
--
-item
-:
-not
-(
-:
-first
--
-child
-)
-:
-:
-before
-{
-content
-:
-url
-(
-chrome
-:
-/
-/
-devtools
-/
-skin
-/
-images
-/
-breadcrumbs
--
-divider
-.
-svg
-)
-;
-background
-:
-none
-;
-position
-:
-relative
-;
-left
-:
--
-3px
-;
-margin
-:
-0
-4px
-0
--
-1px
-;
-top
-:
--
-1px
-;
--
-moz
--
-context
--
-properties
-:
-fill
-;
-fill
-:
 var
 (
 -
 -
-theme
+inline
 -
-icon
--
-disabled
--
-color
+padding
 )
 ;
-}
-.
-breadcrumbs
--
-widget
--
-item
+&
 [
 aria
 -
@@ -754,6 +692,20 @@ pressed
 true
 "
 ]
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
+)
+;
 .
 breadcrumbs
 -
@@ -777,21 +729,6 @@ purple
 )
 ;
 }
-.
-breadcrumbs
--
-widget
--
-item
-[
-aria
--
-pressed
-=
-"
-true
-"
-]
 :
 is
 (
@@ -825,30 +762,247 @@ classes
 {
 color
 :
-var
-(
--
--
-theme
--
-highlight
--
-blue
-)
+currentColor
 ;
 }
-.
-theme
+:
+root
+[
+forced
 -
-dark
+colors
+-
+active
+]
+&
+{
+background
+-
+color
+:
+SelectedItem
+;
+color
+:
+SelectedItemText
+;
+}
+}
+}
+/
+*
+We
+display
+a
+separator
+before
+all
+items
+except
+the
+first
+one
+*
+/
 .
 breadcrumbs
 -
 widget
 -
 item
+:
+not
+(
+:
+first
+-
+child
+)
 {
-color
+/
+*
+We
+don
+'
+t
+want
+the
+separator
+to
+be
+part
+of
+the
+button
+visually
+so
+we
+'
+ll
+move
+it
+"
+between
+"
+the
+items
+*
+/
+margin
+-
+inline
+-
+start
+:
+var
+(
+-
+-
+separator
+-
+width
+)
+;
+padding
+-
+inline
+-
+start
+:
+0
+;
+&
+:
+:
+before
+{
+content
+:
+url
+(
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+breadcrumbs
+-
+divider
+.
+svg
+)
+;
+background
+:
+none
+;
+display
+:
+inline
+-
+block
+;
+text
+-
+align
+:
+center
+;
+width
+:
+var
+(
+-
+-
+separator
+-
+width
+)
+;
+/
+*
+move
+the
+separator
+"
+out
+"
+of
+the
+breadcrumb
+item
+*
+/
+margin
+-
+inline
+-
+start
+:
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+separator
+-
+width
+)
+)
+;
+/
+*
+and
+add
+margin
+after
+to
+simulate
+padding
+for
+the
+"
+inside
+"
+of
+the
+button
+*
+/
+margin
+-
+inline
+-
+end
+:
+var
+(
+-
+-
+inline
+-
+padding
+)
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
 :
 var
 (
@@ -856,22 +1010,23 @@ var
 -
 theme
 -
-selection
+icon
+-
+disabled
 -
 color
 )
 ;
 }
-.
-theme
--
-light
+}
 .
 breadcrumbs
 -
 widget
 -
 item
+-
+tag
 {
 color
 :
@@ -879,9 +1034,9 @@ var
 (
 -
 -
-theme
+breadcrumb
 -
-body
+tag
 -
 color
 )
