Bug 1893730 - Ensure the about:newtab supports HCM on Windows - r=ayeddi,desktop-theme-reviewers,home-newtab-reviewers,nbarrett,hjones
Differential Revision: https://phabricator.services.mozilla.com/D225553

UltraBlame original commit: 0187713353976912723373924745163ccc161406

--- a/browser/components/newtab/content-src/styles/_variables.scss
+++ b/browser/components/newtab/content-src/styles/_variables.scss
@@ -1860,45 +1860,13 @@ border
 ;
 outline
 :
-0
-;
-box
--
-shadow
-:
-0
-0
-0
-3px
 var
 (
 -
 -
-newtab
+focus
 -
-primary
--
-action
--
-background
--
-dimmed
-)
-0
-0
-0
-1px
-var
-(
--
--
-newtab
--
-primary
--
-action
--
-background
+outline
 )
 ;
 }
