--- a/browser/components/newtab/css/activity-stream.css
+++ b/browser/components/newtab/css/activity-stream.css
@@ -16391,45 +16391,13 @@ border
 ;
 outline
 :
-0
-;
-box
--
-shadow
-:
-0
-0
-0
-3px
 var
 (
 -
 -
-newtab
+focus
 -
-primary
--
-action
--
-background
--
-dimmed
-)
-0
-0
-0
-1px
-var
-(
--
--
-newtab
--
-primary
--
-action
--
-background
+outline
 )
 ;
 }
@@ -25408,45 +25376,13 @@ border
 ;
 outline
 :
-0
-;
-box
--
-shadow
-:
-0
-0
-0
-3px
 var
 (
 -
 -
-newtab
+focus
 -
-primary
--
-action
--
-background
--
-dimmed
-)
-0
-0
-0
-1px
-var
-(
--
--
-newtab
--
-primary
--
-action
--
-background
+outline
 )
 ;
 transition
@@ -25605,45 +25541,13 @@ border
 ;
 outline
 :
-0
-;
-box
--
-shadow
-:
-0
-0
-0
-3px
 var
 (
 -
 -
-newtab
+focus
 -
-primary
--
-action
--
-background
--
-dimmed
-)
-0
-0
-0
-1px
-var
-(
--
--
-newtab
--
-primary
--
-action
--
-background
+outline
 )
 ;
 }
@@ -33310,45 +33214,13 @@ border
 ;
 outline
 :
-0
-;
-box
--
-shadow
-:
-0
-0
-0
-3px
 var
 (
 -
 -
-newtab
+focus
 -
-primary
--
-action
--
-background
--
-dimmed
-)
-0
-0
-0
-1px
-var
-(
--
--
-newtab
--
-primary
--
-action
--
-background
+outline
 )
 ;
 transition
@@ -38630,45 +38502,13 @@ border
 ;
 outline
 :
-0
-;
-box
--
-shadow
-:
-0
-0
-0
-3px
 var
 (
 -
 -
-newtab
+focus
 -
-primary
--
-action
--
-background
--
-dimmed
-)
-0
-0
-0
-1px
-var
-(
--
--
-newtab
--
-primary
--
-action
--
-background
+outline
 )
 ;
 }
@@ -41183,45 +41023,13 @@ border
 ;
 outline
 :
-0
-;
-box
--
-shadow
-:
-0
-0
-0
-3px
 var
 (
 -
 -
-newtab
+focus
 -
-primary
--
-action
--
-background
--
-dimmed
-)
-0
-0
-0
-1px
-var
-(
--
--
-newtab
--
-primary
--
-action
--
-background
+outline
 )
 ;
 }
@@ -44441,45 +44249,13 @@ border
 ;
 outline
 :
-0
-;
-box
--
-shadow
-:
-0
-0
-0
-3px
 var
 (
 -
 -
-newtab
+focus
 -
-primary
--
-action
--
-background
--
-dimmed
-)
-0
-0
-0
-1px
-var
-(
--
--
-newtab
--
-primary
--
-action
--
-background
+outline
 )
 ;
 transition
