Backed out 3 changesets (bug 1921758, bug 1916650, bug 1916656) for causing failures at browser_inspector_breadcrumbs_keybinding.js. CLOSED TREE
Backed out changeset 446f010a8fba (bug 1916650)
Backed out changeset 08dc66cce1b1 (bug 1921758)
Backed out changeset a15a6ca0664a (bug 1916656)

UltraBlame original commit: a9196dfe2a290e29ed05e46ef076c762a1946fa0

--- a/devtools/client/themes/breadcrumbs.css
+++ b/devtools/client/themes/breadcrumbs.css
@@ -69,12 +69,27 @@ class
 -
 color
 :
-light
--
-dark
-(
 #
 909090
+;
+}
+.
+theme
+-
+dark
+:
+root
+{
+-
+-
+breadcrumb
+-
+id
+-
+class
+-
+color
+:
 var
 (
 -
@@ -87,74 +102,7 @@ color
 -
 strong
 )
-)
 ;
--
--
-breadcrumb
--
-tag
--
-color
-:
-light
--
-dark
-(
-var
-(
--
--
-theme
--
-body
--
-color
-)
-var
-(
--
--
-theme
--
-contrast
--
-color
-)
-)
-;
-&
-[
-forced
--
-colors
--
-active
-]
-{
--
--
-breadcrumb
--
-id
--
-class
--
-color
-:
-ButtonText
-;
--
--
-breadcrumb
--
-tag
--
-color
-:
-ButtonText
-;
-}
 }
 /
 *
@@ -646,164 +594,61 @@ widget
 -
 item
 {
--
--
-separator
--
-width
-:
-8px
-;
--
--
-inline
--
-padding
-:
-6px
-;
 background
+-
+color
 :
-none
+transparent
 ;
 border
 :
 none
 ;
+margin
+-
+inline
+:
+10px
+1px
+;
 padding
 :
 0
-var
-(
--
--
-inline
--
-padding
-)
 ;
-&
-[
-aria
--
-pressed
-=
-"
-true
-"
-]
-{
-color
-:
-var
-(
--
--
-theme
--
-highlight
--
-blue
-)
-;
+}
 .
 breadcrumbs
 -
 widget
 -
 item
+:
+first
 -
-id
+child
+:
+:
+before
 {
-color
-:
-var
-(
--
--
-theme
--
-highlight
--
-purple
-)
-;
-}
-:
-is
-(
-.
-breadcrumbs
--
-widget
--
-item
--
-tag
-.
-breadcrumbs
--
-widget
--
-item
--
-pseudo
--
-classes
-.
-breadcrumbs
--
-widget
--
-item
--
-classes
-)
-{
-color
-:
-currentColor
-;
-}
-:
-root
-[
-forced
--
-colors
--
-active
-]
-&
-{
-background
--
-color
-:
-SelectedItem
-;
-color
-:
-SelectedItemText
-;
-}
-}
-}
 /
 *
-We
-display
-a
+The
+first
+crumb
+does
+not
+need
+any
 separator
 before
-all
-items
-except
-the
-first
-one
+itself
 *
 /
+content
+:
+unset
+;
+}
 .
 breadcrumbs
 -
@@ -818,60 +663,6 @@ first
 -
 child
 )
-{
-/
-*
-We
-don
-'
-t
-want
-the
-separator
-to
-be
-part
-of
-the
-button
-visually
-so
-we
-'
-ll
-move
-it
-"
-between
-"
-the
-items
-*
-/
-margin
--
-inline
--
-start
-:
-var
-(
--
--
-separator
--
-width
-)
-;
-padding
--
-inline
--
-start
-:
-0
-;
-&
 :
 :
 before
@@ -901,108 +692,48 @@ background
 :
 none
 ;
-display
+position
 :
-inline
--
-block
+relative
 ;
-text
--
-align
+left
 :
-center
+-
+3px
 ;
-width
+margin
 :
-var
-(
+0
+4px
+0
 -
--
-separator
--
-width
-)
+1px
 ;
-/
-*
-move
-the
-separator
-"
-out
-"
-of
-the
-breadcrumb
+top
+:
+-
+1px
+;
+}
+.
+breadcrumbs
+-
+widget
+-
 item
-*
-/
-margin
+[
+checked
+]
+.
+breadcrumbs
 -
-inline
+widget
 -
-start
-:
-calc
-(
+item
 -
-1
-*
-var
-(
--
--
-separator
--
-width
-)
-)
-;
-/
-*
-and
-add
-margin
-after
-to
-simulate
-padding
-for
-the
-"
-inside
-"
-of
-the
-button
-*
-/
-margin
--
-inline
--
-end
-:
-var
-(
--
--
-inline
--
-padding
-)
-;
--
-moz
--
-context
--
-properties
-:
-fill
-;
-fill
+id
+{
+color
 :
 var
 (
@@ -1010,15 +741,21 @@ var
 -
 theme
 -
-icon
+highlight
 -
-disabled
--
-color
+purple
 )
 ;
 }
-}
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
 .
 breadcrumbs
 -
@@ -1027,6 +764,42 @@ widget
 item
 -
 tag
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+pseudo
+-
+classes
+.
+breadcrumbs
+-
+widget
+-
+item
+[
+checked
+]
+.
+breadcrumbs
+-
+widget
+-
+item
+-
+classes
 {
 color
 :
@@ -1034,9 +807,59 @@ var
 (
 -
 -
-breadcrumb
+theme
 -
-tag
+highlight
+-
+blue
+)
+;
+}
+.
+theme
+-
+dark
+.
+breadcrumbs
+-
+widget
+-
+item
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
+;
+}
+.
+theme
+-
+light
+.
+breadcrumbs
+-
+widget
+-
+item
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+body
 -
 color
 )
