Bug 1912491 - Add a button to the CFR Tools page to reset `lastCfrShownTimeInMillis` r=android-reviewers,007
Differential Revision: https://phabricator.services.mozilla.com/D218985

UltraBlame original commit: a0397bb7a6683f94c1a36b75314d839e65c92e42

--- a/mobile/android/fenix/app/src/main/res/values/static_strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/static_strings.xml
@@ -2365,6 +2365,41 @@ string
 -
 -
 The
+text
+of
+the
+reset
+CFR
+timestamp
+button
+in
+CFR
+Tools
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_cfr_tools_reset_cfr_timestamp
+"
+>
+Reset
+last
+CFR
+shown
+timestamp
+<
+/
+string
+>
+<
+!
+-
+-
+The
 title
 of
 the
