Bug 1909632 - Refactor confusing pseudo-spanish in test; r=translations-reviewers,nordzilla
I busted this test while working on this patch, and found the assertion
confusing with the somewhat incorrect Spanish.

Differential Revision: https://phabricator.services.mozilla.com/D226522

UltraBlame original commit: 34b62cca961880f5f9338339b00feb858afd2e52

--- a/toolkit/components/translations/tests/browser/translations-tester-shadow-dom-es.html
+++ b/toolkit/components/translations/tests/browser/translations-tester-shadow-dom-es.html
@@ -82,12 +82,9 @@ body
 <
 h1
 >
-Esto
-se
-contenta
-en
-Luz
+Normal
 DOM
+content
 <
 /
 h1
@@ -169,12 +166,11 @@ innerHTML
 <
 p
 >
-Esto
-se
-contento
-en
+This
+is
 Shadow
 DOM
+content
 <
 /
 p
@@ -234,13 +230,14 @@ innerHTML
 <
 p
 >
-Esto
-se
-contenta
-en
-ra
-z
-interior
+This
+is
+content
+in
+a
+nested
+Shadow
+DOM
 <
 /
 p
@@ -291,13 +288,13 @@ innerHTML
 <
 p
 >
-Esto
-se
-contento
-en
-Shadow
+This
+is
+a
+second
+shadow
 DOM
-2
+element
 <
 /
 p
