--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -2302,6 +2302,31 @@ display
 :
 block
 ;
+/
+*
+This
+is
+technically
+not
+needed
+because
+popover
+takes
+care
+of
+it
+but
+*
+helps
+for
+clarity
+.
+*
+/
+position
+:
+absolute
+;
 height
 :
 var
