Bug 1927219 - Set consistent opener policy for printing. r=nika
Differential Revision: https://phabricator.services.mozilla.com/D226964

UltraBlame original commit: e2852a645672409e3364339ac48358cae09ceda6

--- a/toolkit/components/printing/tests/file_print_coop_helper.html
+++ b/toolkit/components/printing/tests/file_print_coop_helper.html
@@ -59,12 +59,12 @@ switch
 (
 location
 .
-search
+hash
 )
 {
 case
 "
-?
+#
 print
 "
 :
@@ -78,7 +78,7 @@ break
 ;
 case
 "
-?
+#
 print
 -
 same
@@ -88,6 +88,50 @@ origin
 frame
 "
 :
+{
+let
+params
+=
+new
+URLSearchParams
+(
+location
+.
+search
+)
+;
+params
+.
+delete
+(
+"
+file
+"
+)
+;
+params
+.
+set
+(
+"
+html
+"
+"
+Hello
+<
+script
+>
+print
+(
+)
+<
+\
+/
+script
+>
+"
+)
+;
 iframe
 .
 src
@@ -99,7 +143,30 @@ builder
 .
 sjs
 ?
-html
+{
+params
+}
+;
+break
+;
+}
+case
+"
+#
+print
+-
+same
+-
+origin
+-
+frame
+-
+srcdoc
+"
+:
+iframe
+.
+srcdoc
 =
 Hello
 <
@@ -118,7 +185,7 @@ break
 ;
 case
 "
-?
+#
 print
 -
 cross
