Bug 1927428 - Handle larger system fonts in expanded vertical tabs r=dao,desktop-theme-reviewers,tabbrowser-reviewers,sidebar-reviewers,nsharpley
Differential Revision: https://phabricator.services.mozilla.com/D227130

UltraBlame original commit: 37ec9eb55d228b7acc9b56b20b14c95010dec268

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -484,6 +484,20 @@ black
 -
 tab
 -
+label
+-
+line
+-
+height
+:
+1
+.
+7
+;
+-
+-
+tab
+-
 loading
 -
 fill
@@ -1362,7 +1376,27 @@ min
 -
 height
 :
+max
+(
 32px
+calc
+(
+var
+(
+-
+-
+tab
+-
+label
+-
+line
+-
+height
+)
+*
+1em
+)
+)
 ;
 -
 -
@@ -4494,6 +4528,11 @@ secondarytext
 -
 unsupported
 ]
+[
+orient
+=
+vertical
+]
 )
 &
 {
@@ -4668,9 +4707,18 @@ line
 -
 height
 :
-1
-.
-7
+var
+(
+-
+-
+tab
+-
+label
+-
+line
+-
+height
+)
 ;
 /
 *
@@ -8411,6 +8459,23 @@ min
 height
 )
 ;
+line
+-
+height
+:
+var
+(
+-
+-
+tab
+-
+label
+-
+line
+-
+height
+)
+;
 border
 -
 radius
@@ -9484,19 +9549,6 @@ inner
 inline
 -
 margin
-)
-;
-height
-:
-var
-(
--
--
-tab
--
-min
--
-height
 )
 ;
 }
