Bug 1916693 - [devtools] Use/rename variables for shared colors between cubic bezier and linear widgets. r=devtools-reviewers,ochameau.
Differential Revision: https://phabricator.services.mozilla.com/D227172

UltraBlame original commit: 300625eeb1addfa2d24d0786bb042a4612e090ab

--- a/devtools/client/shared/widgets/cubic-bezier.css
+++ b/devtools/client/shared/widgets/cubic-bezier.css
@@ -1,3 +1,90 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
+/
+*
+Based
+on
+Lea
+Verou
+www
+.
+cubic
+-
+bezier
+.
+com
+See
+https
+:
+/
+/
+github
+.
+com
+/
+LeaVerou
+/
+cubic
+-
+bezier
+*
+/
 .
 cubic
 -
@@ -74,6 +161,12 @@ overflow
 hidden
 ;
 }
+/
+*
+Coordinate
+Plane
+*
+/
 .
 cubic
 -
@@ -138,8 +231,20 @@ border
 ;
 background
 :
-#
-666
+var
+(
+-
+-
+timing
+-
+function
+-
+control
+-
+point
+-
+background
+)
 ;
 display
 :
@@ -198,7 +303,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -209,7 +316,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -236,7 +345,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -247,7 +358,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -373,6 +486,14 @@ position
 0
 ;
 }
+/
+*
+Timing
+Function
+Preview
+Widget
+*
+/
 .
 cubic
 -
@@ -445,9 +566,21 @@ height
 1px
 ;
 background
+-
+color
 :
-#
-ccc
+var
+(
+-
+-
+timing
+-
+function
+-
+preview
+-
+scale
+)
 ;
 }
 .
@@ -503,14 +636,43 @@ border
 :
 2px
 solid
-white
+var
+(
+-
+-
+timing
+-
+function
+-
+preview
+-
+dot
+-
+border
+)
 ;
 background
 :
-#
-4C9ED9
+var
+(
+-
+-
+timing
+-
+function
+-
+line
+-
+color
+)
 ;
 }
+/
+*
+Preset
+Widget
+*
+/
 .
 cubic
 -
@@ -555,6 +717,21 @@ right
 :
 4px
 ;
+/
+*
+Visual
+balance
+for
+the
+panel
+-
+arrowcontent
+border
+on
+the
+left
+*
+/
 }
 #
 preset
