--- a/devtools/client/shared/widgets/linear-widget.css
+++ b/devtools/client/shared/widgets/linear-widget.css
@@ -181,7 +181,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -219,8 +221,18 @@ stroke
 ;
 stroke
 :
-#
-4C9ED9
+var
+(
+-
+-
+timing
+-
+function
+-
+line
+-
+color
+)
 ;
 }
 .
@@ -252,45 +264,20 @@ var
 (
 -
 -
-grey
+timing
 -
-55
+function
+-
+control
+-
+point
+-
+background
 )
 ;
 cursor
 :
 pointer
-;
-}
-:
-root
-.
-theme
--
-dark
-.
-linear
--
-easing
--
-function
--
-container
-.
-control
--
-point
-{
-fill
-:
-var
-(
--
--
-grey
--
-20
-)
 ;
 }
 /
@@ -349,11 +336,13 @@ var
 (
 -
 -
-bezier
+timing
 -
-grid
+function
 -
-color
+preview
+-
+scale
 )
 45
 %
@@ -361,11 +350,13 @@ var
 (
 -
 -
-bezier
+timing
 -
-grid
+function
 -
-color
+preview
+-
+scale
 )
 55
 %
@@ -433,11 +424,34 @@ border
 :
 2px
 solid
-white
+var
+(
+-
+-
+timing
+-
+function
+-
+preview
+-
+dot
+-
+border
+)
 ;
 background
 :
-#
-4C9ED9
+var
+(
+-
+-
+timing
+-
+function
+-
+line
+-
+color
+)
 ;
 }
