--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -323,7 +323,9 @@ eee
 ;
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -350,6 +352,99 @@ rgba
 0
 .
 1
+)
+)
+;
+-
+-
+timing
+-
+function
+-
+line
+-
+color
+:
+#
+4C9ED9
+;
+-
+-
+timing
+-
+function
+-
+preview
+-
+scale
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+grey
+-
+43
+)
+var
+(
+-
+-
+grey
+-
+40
+)
+)
+;
+-
+-
+timing
+-
+function
+-
+preview
+-
+dot
+-
+border
+:
+white
+;
+-
+-
+timing
+-
+function
+-
+control
+-
+point
+-
+background
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+grey
+-
+55
+)
+var
+(
+-
+-
+grey
+-
+20
 )
 )
 ;
