Bug 1916693 - [devtools] Adapt linear easing widget in High Contrast Mode. r=devtools-reviewers,ochameau
We also take this as an opportunity to force the widget in LTR,
as the animation preview as malfunctioning in RTL.

Differential Revision: https://phabricator.services.mozilla.com/D227173

UltraBlame original commit: a7f8831aaae7e65058730d62594bfd0a74c6a318

--- a/devtools/client/shared/widgets/linear-widget.css
+++ b/devtools/client/shared/widgets/linear-widget.css
@@ -70,6 +70,10 @@ height
 100
 %
 ;
+direction
+:
+ltr
+;
 }
 .
 linear
@@ -364,6 +368,33 @@ transparent
 55
 %
 )
+;
+/
+*
+opt
+-
+out
+of
+forced
+colors
+so
+we
+can
+see
+the
+"
+line
+"
+gradient
+*
+/
+forced
+-
+color
+-
+adjust
+:
+none
 ;
 }
 .
