--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -279,6 +279,134 @@ layer
 shared
 )
 ;
+/
+*
+The
+following
+properties
+values
+are
+consumed
+by
+the
+client
+for
+drawing
+in
+canvas
+*
+(
+e
+.
+g
+.
+for
+the
+CubicBezierWidget
+)
+.
+*
+Since
+they
+'
+re
+defined
+in
+:
+root
+with
+light
+-
+dark
+(
+)
+we
+need
+to
+register
+them
+so
+we
+'
+ll
+get
+*
+the
+actual
+final
+(
+rgb
+)
+color
+and
+not
+the
+declaration
+with
+substituted
+variables
+*
+/
+property
+-
+-
+bezier
+-
+diagonal
+-
+color
+{
+syntax
+:
+'
+<
+color
+>
+'
+;
+inherits
+:
+true
+;
+initial
+-
+value
+:
+transparent
+;
+}
+property
+-
+-
+timing
+-
+function
+-
+control
+-
+point
+-
+background
+{
+syntax
+:
+'
+<
+color
+>
+'
+;
+inherits
+:
+true
+;
+initial
+-
+value
+:
+transparent
+;
+}
 :
 root
 {
