Bug 1916682 - [devtools] Adapt cubic bezier curve widget in High Contrast Mode. r=devtools-reviewers,ochameau.
Differential Revision: https://phabricator.services.mozilla.com/D227175

UltraBlame original commit: 88101123c872532ff0479ef5d8c3ffccc1700be1

--- a/devtools/client/shared/widgets/cubic-bezier.css
+++ b/devtools/client/shared/widgets/cubic-bezier.css
@@ -512,6 +512,74 @@ cursor
 :
 pointer
 ;
+/
+*
+opt
+-
+out
+of
+forced
+colors
+as
+-
+-
+timing
+-
+function
+-
+control
+-
+point
+-
+background
+is
+a
+registered
+property
+so
+the
+engine
+will
+compute
+it
+to
+an
+rgb
+color
+which
+means
+it
+won
+'
+t
+be
+seen
+as
+a
+system
+color
+in
+High
+Contrast
+Mode
+and
+a
+default
+color
+would
+be
+used
+.
+*
+/
+forced
+-
+color
+-
+adjust
+:
+none
+;
 }
 .
 cubic
@@ -630,6 +698,100 @@ select
 :
 none
 ;
+:
+root
+[
+forced
+-
+colors
+-
+active
+]
+&
+{
+/
+*
+opt
+-
+out
+of
+forced
+colors
+so
+we
+can
+see
+still
+the
+lines
+in
+High
+Contrast
+Mode
+.
+-
+-
+timing
+-
+function
+-
+grid
+-
+color
+does
+have
+a
+specific
+value
+in
+HCM
+so
+it
+should
+be
+fine
+*
+/
+forced
+-
+color
+-
+adjust
+:
+none
+;
+/
+*
+And
+set
+the
+forced
+colors
+on
+children
+so
+High
+Contrast
+Mode
+behaves
+as
+expected
+*
+/
+&
+>
+*
+{
+forced
+-
+color
+-
+adjust
+:
+auto
+;
+}
+}
 }
 /
 *
@@ -764,6 +926,34 @@ preview
 scale
 )
 ;
+/
+*
+opt
+-
+out
+of
+forced
+colors
+so
+we
+can
+see
+the
+line
+in
+High
+Contrast
+Mode
+*
+/
+forced
+-
+color
+-
+adjust
+:
+none
+;
 }
 .
 cubic
@@ -828,6 +1018,43 @@ line
 -
 color
 )
+;
+/
+*
+opt
+-
+out
+of
+forced
+colors
+as
+-
+-
+timing
+-
+function
+-
+line
+-
+color
+is
+using
+a
+non
+system
+but
+high
+contrast
+color
+*
+/
+forced
+-
+color
+-
+adjust
+:
+none
 ;
 }
 /
